# KARL

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANUAL.md  README.md  karl-cli  pyproject.toml
karl/: __init__.py  __main__.py  cli.py  config.py  crew.py  doctor.py  engine.py  gpu.py  loop.py  models.py  session.py  shell.py  tools.py  ui.py
tests/: conftest.py  test_cli.py  test_config.py  test_doctor.py  test_engine.py  test_gpu.py  test_loop.py  test_sandbox.py  test_session.py  test_tools.py  test_ui.py
