[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "karl"
version = "9.2.0"
description = "KARL — a small, fast multi-agent CLI harness for local LLMs, standard library only."
readme = "README.md"
requires-python = ">=3.10"
# KARL runs on the Python standard library. Nothing to install.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
karl = "karl.cli:main"

[tool.setuptools.packages.find]
include = ["karl*"]

[tool.pytest.ini_options]
# so `pytest` (without installing the package) finds `karl` from the repo root
pythonpath = ["."]
